Fixed markup for task list

--- a/app/public/modules/tasks/less/taskList.less
+++ b/app/public/modules/tasks/less/taskList.less
@@ -8,6 +8,21 @@ ol, ul, li {
 	padding: 0;
 }
 
+.todo-list-controls {
+  padding: 5px 15px;
+  background: #253340;
+  text-align: right;
+}
+
+.controls-link {
+  font-size: 1.3em;
+  padding: 0 5px;
+  color: #979FA7;
+  &:hover, &:active {
+	color: #1ab394;
+  }
+}
+
 .task-list-header {
 	border-bottom: 1px solid #212121;
 	height: 70px;
