--- a/app/app/views/index.server.view.html
+++ b/app/app/views/index.server.view.html
@@ -8,7 +8,7 @@
 
 			<section class="main-content" ng-controller="HomeController as home" ng-class="{'with-sidebar': home.withSidebar}">
 				<div class="container-wrapper">
-					<header data-ng-include="'/modules/core/views/header.client.view.html'" class="navbar navbar-default"></header>
+					<header data-ng-include="'/modules/core/views/header.client.view.html'" class="row"></header>
 
 					<div class="content">
 						<div data-ui-view></div>
