--- a/app/public/modules/calendar/views/calendar.client.view.html
+++ b/app/public/modules/calendar/views/calendar.client.view.html
@@ -1,7 +1,8 @@
-<div class="calendar-wrapper" data-ng-controller="CalendarController">
+
+<div class="wrapper calendar-wrapper" data-ng-controller="CalendarController">
 	<div class="row">
-		<div class="col-lg-12">
-			<div ui-calendar="uiConfig.calendar" class="calendar" ng-model="eventSources"></div>
+		<div class="col-lg-12 ibox">
+			<div ui-calendar="uiConfig.calendar" class="calendar ibox-content" ng-model="eventSources"></div>
 		</div>
 	</div>
 </div>
