--- a/app/public/modules/core/views/header.client.view.html
+++ b/app/public/modules/core/views/header.client.view.html
@@ -1,28 +1,36 @@
-<div data-ng-controller="HeaderController" data-ng-show="authentication.user">
-		<div class="container-fluid">
-			<div class="navbar-header">
-				<span class="menu-btn glyphicon glyphicon-menu-hamburger" data-ng-click="toggleSidebar()" aria-hidden="true"></span>
-				<h2 class="page-title">User profile</h2>
-			</div>
-			<div class="notification-menu">
-				<span class="glyphicon glyphicon-calendar calendar-btn" aria-hidden="true"></span>
-				<div class="notification-icon">
-					<span class="glyphicon glyphicon-bell" aria-hidden="true"></span>
-					<span class="badge">2</span>
-				</div>
+<div data-ng-controller="HeaderController" data-ng-show="authentication.user" class="navbar navbar-static-top border-bottom">
+	<div class="navbar-header">
+		<a class="navbar-minimalize minimalize-styl-2 btn btn-primary" data-ng-click="toggleSidebar()">
+			<i class="fa fa-bars" aria-hidden="true"></i>
+		</a>
 
-				<div class="dropdown nav-user-profile">
-					<a class="dropdown-toggle" type="button" data-toggle="dropdown">Username
-						<img src="modules\core\img\default-user-avatar.png"
-							 class="profile-image img-circle">
-						<span class="caret"></span></a>
-					<ul class="dropdown-menu">
-						<li><a href="#!/settings/profile">Settings</a></li>
-						<li><a href="#!/templates">My templates</a></li>
-						<li><a href="/auth/signout">Logout</a></li>
-					</ul>
-				</div>
-			</div>
-		</div>
+		<h2 class="page-title">User profile</h2>
+	</div>
+
+	<ul class="nav navbar-top-links navbar-right">
+		<li>
+			<a ui-sref="home">
+				<i class="fa fa-calendar calendar-btn" aria-hidden="true"></i>
+			</a>
+		</li>
+		<li>
+			<a ui-sref="home" class="notifications-info">
+				<i class="fa fa-bell" aria-hidden="true"></i>
+				<span class="label label-primary">2</span>
+			</a>
+		</li>
+
+		<li class="dropdown nav-user-profile">
+			<a class="dropdown-toggle" type="button" data-toggle="dropdown">Username
+				<img src="modules\users\img\profiles\default.jpg"
+					 class="profile-image img-circle">
+				<span class="caret"></span></a>
+			<ul class="dropdown-menu">
+				<li><a href="#!/settings/profile">Settings</a></li>
+				<li><a href="#!/templates">My templates</a></li>
+				<li><a href="/auth/signout">Logout</a></li>
+			</ul>
+		</li>
+	</ul>
 </div>
 
