removed button today from datepicker

--- a/app/public/modules/tasks/less/createTask.less
+++ b/app/public/modules/tasks/less/createTask.less
@@ -153,6 +153,10 @@
 	.pool-right {
 		right: 70px;
 	}
+	#endDate + .dropdown-menu [ng-click="select('today')"] {
+	  display: none;
+	}
+	#endDate + .dropdown-menu button {
+	  border-radius: 3px;
+	}
 }
-
-
