EPMKHRDMH-177: markup for notifications tooltip

--- a/app/public/modules/core/less/core.less
+++ b/app/public/modules/core/less/core.less
@@ -153,30 +153,18 @@ a {
 		top: 12px;
 	}
 
-  	.notification-dropdown {
-		padding: 10px 0;
+  	.notifications-dropdown {
 
-	li > a,
-	.notifications-all-control a {
-		color: inherit;
-		display: block;
-	}
-
-	li > a:hover {
-	  	color: #262626;
-	  	background-color: #f5f5f5;
-	}
-
-	.notifications-all-control a {
+	  &__control a {
 	  	text-transform: capitalize;
-	}
+	  }
 
-	.notification-title {
+	  .notification-title {
 		width: 60%;
 		white-space: nowrap;
 		overflow: hidden;
 		text-overflow: ellipsis;
-	}
+	  }
   }
 }
 
