--- a/app/public/modules/core/less/core.less
+++ b/app/public/modules/core/less/core.less
@@ -66,7 +66,7 @@ a {
   color: #fff;
   font-size: 1.3em;
   &:hover {
-	color: #1ab394;
+	color: @base-color;
   }
 }
 
@@ -144,6 +144,23 @@ a {
 
 }
 
+.nav .dropdown-menu > li > a:hover,
+.nav .dropdown-menu > li > a:focus {
+  background-image: none;
+}
+
+.nav .dropdown-menu > li > a {
+  padding: 5px 10px;
+  margin: 5px 0;
+}
+
+.dropdown-title {
+  background: #F5F5F5;;
+  padding: 5px 10px;
+  text-transform: uppercase;
+  font-size: 10px;
+}
+
 .nav-notifications {
 	.notifications-info .label {
 	  	line-height: 12px;
@@ -155,11 +172,23 @@ a {
 
   	.notifications-dropdown {
 
+      .link-block {
+        border-top: 1px solid #ddd;
+      }
+
 	  &__control a {
 	  	text-transform: capitalize;
+        font-weight: bold;
+        display: block;
+        padding-top: 15px;
+        padding-bottom: 0;
 	  }
 
-	  .notification-title {
+      &__control a:hover {
+        color: @base-color;
+      }
+
+      .notification-title {
 		width: 60%;
 		white-space: nowrap;
 		overflow: hidden;
@@ -198,7 +227,7 @@ div.ui-notification {
 	}
 
 	&.success {
-		background: #1ab394;
+		background: @base-color;
 	}
 
 	.message {
