--- a/app/public/modules/core/views/header.client.view.html
+++ b/app/public/modules/core/views/header.client.view.html
@@ -14,33 +14,8 @@
 				<i class="fa fa-calendar calendar-btn" aria-hidden="true"></i>
 			</a>
 		</li>
-		<!--TODO: rewrite logic according to notifications-->
-		<li class="dropdown nav-notifications" ng-controller="NotificationsController" data-ng-init="find()">
-			<a class="notifications-info" data-ng-class="{disable: !notifications.length}" data-toggle="dropdown">
-				<i class="fa fa-bell" aria-hidden="true"></i>
-				<span class="label"
-					  data-ng-class="notifications.length ? 'label-primary' : 'label-default'"
-					  data-ng-bind="notifications.length">
-				</span>
-			</a>
-			<!-- TODO: rewrite static to data from model -->
-			<ul data-ng-show="notifications.length" class="dropdown-menu dropdown-alerts notifications-dropdown">
-				<li data-ng-repeat="notification in notifications | limitTo: 3">
-					<a data-ng-href="#!/notifications/{{notification._id}}" class="clearfix">
-						<span class="pull-left notification-title" data-ng-bind="notification.title"></span>
-						<span class="pull-right small">3 days ago</span>
-					</a>
-					<div class="divider"></div>
-				</li>
-				<li class="text-center notifications-dropdown__control">
-					<div class="text-center link-block">
-						<a href="#!/notifications">
-							<strong>See all notifications ></strong>
-						</a>
-					</div>
-				</li>
-			</ul>
-		</li>
+
+		<li class="dropdown nav-notifications" notification-tooltip></li>
 
 		<li class="dropdown nav-user-profile">
 			<a class="dropdown-toggle" type="button" data-toggle="dropdown">Username
