--- a/app/public/modules/calendar/views/calendar.client.view.html
+++ b/app/public/modules/calendar/views/calendar.client.view.html
@@ -1,8 +1,8 @@
 
-<div class="wrapper calendar-wrapper" data-ng-controller="CalendarController">
+<div class="wrapper calendar-wrapper" data-ng-controller="CalendarController as calendar">
 	<div class="row">
 		<div class="col-lg-12 ibox">
-			<div ui-calendar="uiConfig.calendar" class="calendar ibox-content" ng-model="eventSources"></div>
+			<div ui-calendar="calendar.uiConfig.calendar" class="calendar ibox-content" data-ng-model="calendar.eventSources"></div>
 		</div>
 	</div>
 </div>
