Added fixes for task form

--- a/app/public/modules/tasks/views/create-task.client.view.html
+++ b/app/public/modules/tasks/views/create-task.client.view.html
@@ -44,7 +44,7 @@
 										</label>
 									</div>
 								</div>
-								<div class="field-group">
+								<div class="form-group">
 									<div class="checkbox">
 										<label for="withOutDate">
 											<input type="checkbox" data-ng-model="newTask.withOutDate" id="withOutDate">Task without date
