Added fixes for task form

--- a/app/public/modules/tasks/less/createTask.less
+++ b/app/public/modules/tasks/less/createTask.less
@@ -126,10 +126,6 @@
 		margin-right: 10px;
 	}
 
-	.input-group.ui-datepicker {
-		width: 50%;
-	}
-
 	.form-group-time-select {
 		position: relative;
 	}
@@ -159,4 +155,34 @@
 	#endDate + .dropdown-menu button {
 	  border-radius: 3px;
 	}
+}
+
+.create-task-wrapper {
+  padding-bottom: 15px;
+
+  .task-details .col-md-4 {
+	padding: 0 10px;
+  }
+
+  .ibox-content {
+	padding: 15px 10px 20px 10px;
+  }
+
+  .field-group {
+	margin-bottom: 10px;
+  }
+
+  rzslider {
+	margin-top: 40px;
+  }
+
+  //TODOD Add the scroll for small screens, needed mobile version
+  .ibox {
+	max-height: 400px;
+	overflow-y: scroll;
+  }
+
+  .btn-holder {
+	margin: 0 15px;
+  }
 }
