--- a/app/public/modules/tasks/views/create-task.client.view.html
+++ b/app/public/modules/tasks/views/create-task.client.view.html
@@ -1,12 +1,13 @@
-<div class="wrapper">
-	<section class="create-task-wrapper row clearfix" data-ng-controller="TasksController">
-		<div class="col-lg-12 col-md-12 ibox">
-			<form class="form-horizontal ibox-content" novalidate>
-				<fieldset>
-					<div class="row">
-						<div class="col-xs-6 col-sm-3">
-							<div class="column-wrapper">
-								<div class="form-group" ng-class="{ error: validationError.title }">
+<div class="wrapper create-task-wrapper row clearfix" data-ng-controller="TasksController">
+	<form class="form-horizontal" novalidate>
+		<fieldset>
+			<div class="row">
+				<div class="col-md-7 col-sm-6 col-xs-12">
+					<div class="ibox task-details">
+						<h4 class="ibox-title">New task</h4>
+						<div class="ibox-content row">
+							<div class="col-md-4 col-sm-12">
+								<div class="field-group" ng-class="{ error: validationError.title }">
 									<label class="control-label label-padding" for="title">Title*</label>
 									<input type="text" data-ng-model="newTask.title"  id="title"
 										   class="form-control input-round-borders" placeholder="Title" required >
@@ -14,7 +15,7 @@
 										{{validationError.title.message}}
 									</div>
 								</div>
-								<div class="form-group">
+								<div class="field-group">
 									<label class="control-label label-padding" for="title">Template</label>
 									<select class="form-control" data-ng-change="loadTaskTemplate(selectedTemplate)"
 											data-ng-model="selectedTemplate" data-ng-options="template.title for template in user.templates"
@@ -22,7 +23,7 @@
 										<option value="">Select template</option>
 									</select>
 								</div>
-								<div class="form-group">
+								<div class="field-group">
 									<label class="control-label label-padding" for="title">Priority*</label>
 									<select name="priority" class="form-control" data-ng-model="newTask.priority" ng-init="newTask.priority='1'">
 										<option value="1">Urgent and Important</option>
@@ -34,14 +35,14 @@
 										{{validationError.priority.message}}
 									</div>
 								</div>
-								<div class="form-group">
+								<div class="field-group">
 									<div class="checkbox isTemplateChecker">
 										<label for="saveAsDraft">
 											<input type="checkbox" data-ng-model="newTask.saveAsDraft" id="saveAsDraft">Save as template
 										</label>
 									</div>
 								</div>
-								<div class="form-group">
+								<div class="field-group">
 									<div class="checkbox">
 										<label for="withOutDate">
 											<input type="checkbox" data-ng-model="newTask.withOutDate" id="withOutDate">Task without date
@@ -49,16 +50,14 @@
 									</div>
 								</div>
 							</div>
-						</div>
-						<div class="col-xs-6 col-sm-3">
-							<div class="column-wrapper">
-								<div class="form-group form-group-time-select">
+							<div class="col-md-4 col-sm-12">
+								<div class="field-group">
 									<label class="control-label label-padding">Start date</label>
 									<div class="input-group ui-datepicker">
-									<span ng-class="{disabled: newTask.withOutDate}"
-										  class="input-group-addon calendar-btn" ng-click="openStart($event)">
-										<i class="fa fa-calendar"></i>
-									</span>
+										<span ng-class="{disabled: newTask.withOutDate}"
+											  class="input-group-addon calendar-btn" ng-click="openStart($event)">
+											<i class="fa fa-calendar"></i>
+										</span>
 
 										<input id="startDate" data-ng-disabled="newTask.withOutDate" type="text" class="form-control input-round-borders calendar-input" datepicker-popup="dd.MM.yyyy"
 											   data-ng-model="newTask.days.startDate" is-open="opened.startDate" min-date="startDate.minDate" max-date="startDate.maxDate"
@@ -66,16 +65,15 @@
 											   close-text="Close"
 											   ng-click="openStart($event)" required/>
 									</div>
-									<timepicker class="select-time" ng-model="newTask.startTime" minute-step="15" show-meridian="true"></timepicker>
+									<!--<timepicker class="select-time" ng-model="newTask.startTime" minute-step="15" show-meridian="true"></timepicker>-->
 								</div>
-								<br>
-								<div class="form-group form-group-time-select">
+								<div class="field-group form-group-time-select">
 									<label class="control-label label-padding" for="endDate">End date</label>
 									<div class="input-group ui-datepicker">
-									<span  ng-class="{disabled: newTask.withOutDate}"
-										   class="input-group-addon calendar-btn" ng-click="openEnd($event)">
-										<i class="fa fa-calendar"></i>
-									</span>
+										<span  ng-class="{disabled: newTask.withOutDate}"
+											   class="input-group-addon calendar-btn" ng-click="openEnd($event)">
+											<i class="fa fa-calendar"></i>
+										</span>
 
 										<input id="endDate" data-ng-disabled="newTask.withOutDate" type="text" class="form-control input-round-borders calendar-input" datepicker-popup="dd.MM.yyyy"
 											   data-ng-model="newTask.days.endDate" is-open="opened.endDate" min-date="endDate.minDate" max-date="endDate.maxDate"
@@ -83,9 +81,9 @@
 											   close-text="Close"
 											   ng-click="openEnd($event)" required/>
 									</div>
-									<timepicker class="select-time" ng-model="newTask.endTime" minute-step="15" show-meridian="true"></timepicker>
+									<!--<timepicker class="select-time" ng-model="newTask.endTime" minute-step="15" show-meridian="true"></timepicker>-->
 								</div>
-								<div class="form-group">
+								<div class="field-group">
 									<label class="control-label">Estimation (hours)</label>
 									<div>
 										<rzslider rz-slider-model="newTask.estimation"
@@ -94,14 +92,8 @@
 									</div>
 								</div>
 							</div>
-						</div>
-
-						<!-- Add the extra clearfix for only the required viewport -->
-						<div class="clearfix visible-xs-block"></div>
-
-						<div class="col-xs-6 col-sm-3">
-							<div class="column-wrapper">
-								<div class="form-group">
+							<div class="col-md-4 col-sm-12">
+								<div class="field-group">
 									<label class="control-label label-padding">Notes</label>
 									<textarea class="form-control notes-area" data-ng-model="newTask.notes"></textarea>
 									<div ng-show="validationError.notes" class="error">
@@ -110,49 +102,39 @@
 								</div>
 							</div>
 						</div>
+					</div>
+				</div>
 
-						<div class="col-xs-6 col-sm-3">
-							<div class="column-wrapper">
-								<table class="slots-table-header">
-									<tr>
-										<td>
-											<label class="control-label label-padding">Slots</label>
-										</td>
-										<td style="text-align: right">
-											<a href="#" title="Generate slots">
-												<span class="glyphicon glyphicon-refresh"></span>
-											</a>
-										</td>
-									</tr>
-								</table>
-								<table class="table table-bordered slots-table">
-									<tr>
-										<td>Monday 22.02</td>
-										<td>16.00-20.00</td>
-										<td>4h</td>
-									</tr>
-									<tr>
-										<td>Tuesday 23.02</td>
-										<td>10.00-14.00</td>
-										<td>4h</td>
-									</tr>
-									<tr>
-										<td>Wednesday 24.02 </td>
-										<td>10.00-14.00</td>
-										<td>4h</td>
-									</tr>
-								</table>
-								<div class="form-group btn-holder pool-bottom pool-right">
-									<button class="btn btn-white" data-ng-click="cancel()">Cancel</button>
-									<button type="submit" data-ng-click="create()" class="btn btn-primary">Create</button>
+				<div class="col-md-5 col-sm-6 col-xs-12">
+					<!--Slots start-->
+					<div class="row">
+						<div class="col-md-8 col-sm-12">
+							<div class="ibox">
+								<h4 class="ibox-title">Slots</h4>
+								<div class="ibox-content">
+									table slots
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4 col-sm-12">
+							<div class="ibox">
+								<h4 class="ibox-title">Progress</h4>
+								<div class="ibox-content">
+									Task progress
 								</div>
 							</div>
 						</div>
 					</div>
-				</fieldset>
-			</form>
-		</div>
-	</section>
+				</div>
+			</div>
+			<div class="row">
+				<div class="btn-holder pull-right">
+					<button class="btn btn-white" data-ng-click="cancel()">Cancel</button>
+					<button type="submit" data-ng-click="create()" class="btn btn-primary">Create</button>
+				</div>
+			</div>
+		</fieldset>
+	</form>
 </div>
 
 <div ng-include="'/modules/calendar/views/calendar.client.view.html'"></div>
