--- a/app/public/modules/notifications/views/view-notification.client.view.html
+++ b/app/public/modules/notifications/views/view-notification.client.view.html
@@ -1,21 +1,176 @@
-<section data-ng-controller="NotificationsController" data-ng-init="findOne()">
-	<div class="page-header">
-		<h1 data-ng-bind="notification.name"></h1>
-	</div>
-	<div class="pull-right" data-ng-show="((authentication.user) && (authentication.user._id == notification.user._id))">
-		<a class="btn btn-primary" href="/#!/notifications/{{notification._id}}/edit">
-			<i class="glyphicon glyphicon-edit"></i>
-		</a>
-		<a class="btn btn-primary" data-ng-click="remove();">
-			<i class="glyphicon glyphicon-trash"></i>
-		</a>
-	</div>
-	<small>
-		<em class="text-muted">
-			Posted on
-			<span data-ng-bind="notification.created | date:'mediumDate'"></span>
-			by
-			<span data-ng-bind="notification.user.displayName"></span>
-		</em>
-	</small>
-</section>
+<div class="wrapper">
+	<section class="row" data-ng-controller="NotificationsController" data-ng-init="findOne();">
+		<div class="col-lg-12">
+			<div class="wrapper wrapper-content">
+				<div class="row">
+					<div class="col-lg-6 clearfix">
+						<div class="ibox">
+							<div class="ibox-title clearfix">
+								<h5>Complete tasks</h5>
+								<div class="ibox-tools">
+									<!-- todo: add check for not finished slots -->
+									<a data-ng-click="remove();">
+										<span class="glyphicon glyphicon-trash"></span>
+									</a>
+								</div>
+							</div>
+							<div class="ibox-content clearfix">
+								<div class="col-lg-6 col-md-6 col-sm-6">
+									<form role="form">
+										<div class="form-group">
+											<label for="title">Title*</label>
+											<input type="text" data-ng-model="notification.title" id="title"
+												   class="form-control" disabled>
+										</div>
+										<div class="form-group">
+											<label for="priority">Priority</label>
+											<select name="priority" class="form-control" id="priority"
+													data-ng-model="notification.priority" disabled>
+												<option value="1">Urgent and Important</option>
+												<option value="2">Important not Urgent</option>
+												<option value="3">Urgent not Important</option>
+												<option value="4">Not Important not urgent</option>
+											</select>
+										</div>
+
+									</form>
+								</div>
+								<div class="col-lg-6 col-md-6 col-sm-6">
+									<!-- todo: format date -->
+									<div class="form-group">
+										<label class="control-label label-padding" for="startDate">Start date</label>
+										<div class="input-group">
+											<span class="input-group-addon calendar-btn">
+												<i class="fa fa-calendar"></i>
+											</span>
+											<input id="startDate" type="text" class="form-control"
+												   data-ng-model="notification.days.startTime" disabled/>
+										</div>
+									</div>
+									<div class="form-group">
+										<label for="endDate">End date</label>
+										<div class="input-group">
+											<span class="input-group-addon calendar-btn">
+												<i class="fa fa-calendar"></i>
+											</span>
+											<input id="endDate" type="text"
+												   class="form-control"
+												   data-ng-model="notification.days.endTime" disabled/>
+										</div>
+									</div>
+								</div>
+								<div class="col-lg-6 col-md-6 col-sm-6">
+									<div class="form-group">
+										<label class="control-label">Estimation</label>
+										<div>
+											<rzslider rz-slider-model="notification.estimation"
+													  rz-slider-options="{floor: 0, ceil: 24,  disabled: true}">
+											</rzslider>
+										</div>
+									</div>
+								</div>
+								<div class="col-lg-6 col-md-6 col-sm-6">
+									<div class="form-group">
+										<label for="notes" class="control-label label-padding">Notes</label>
+									<textarea id="notes" class="form-control notes-area"
+											  data-ng-model="notification.notes"
+											  disabled></textarea>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-6 clearfix">
+						<div class="col-lg-6 col-md-6">
+							<div class="ibox">
+								<!-- todo: rewrite static, add slots logic -->
+								<div class="ibox-title clearfix">
+									<h5>Slots</h5>
+									<div class="ibox-tools">
+
+										<span><i class="fa fa-clock-o"></i> 8h</span>
+										<a href="#">
+											<span class="glyphicon glyphicon-refresh"></span>
+										</a>
+									</div>
+								</div>
+								<div class="ibox-content">
+									<div class="table-responsive">
+										<table class="table table-striped">
+											<thead>
+											</thead>
+											<tbody>
+											<tr>
+												<td>
+													<label>
+														<!-- if slot time is over data-ng-disabled="true"-->
+														<input type="checkbox" checked data-ng-disabled="true">
+													</label>
+												</td>
+												<td>Monday</td>
+												<td>28.05</td>
+												<td>16:00 - 20:00</td>
+												<td>4h</td>
+												<td>
+													<a href="#">
+														<span class="glyphicon glyphicon-trash"></span>
+													</a>
+												</td>
+											</tr>
+											<tr>
+												<td>
+													<label>
+														<input type="checkbox" data-ng-disabled="false">
+													</label>
+												</td>
+												<td>Tuesday</td>
+												<td>29.05</td>
+												<td>16:00 - 20:00</td>
+												<td>4h</td>
+												<td>
+													<!-- if slot is last remove task -->
+													<a href="#">
+														<span class="glyphicon glyphicon-trash"></span>
+													</a>
+												</td>
+											</tr>
+											</tbody>
+										</table>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-6 col-md-6">
+							<!-- todo: rewrite static, add progress logic -->
+							<div class="ibox">
+								<div class="ibox-title clearfix">
+									<h5>Progress</h5>
+									<div class="ibox-tools">
+										<a href="#" title="progress">
+											<i class="fa fa-question"></i>
+										</a>
+									</div>
+								</div>
+								<div class="ibox-content">
+									<div class="progress-chart" donut-chart=""
+										 donut-data="progressChart.data"
+										 donut-colors="progressChart.colors"
+										 donut-formatter="progressChart.formatter">
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-12 clearfix text-right">
+						<div class="col-lg-12">
+							<button class="btn btn-white" data-ng-click="closeView();">Cancel</button>
+							<button class="btn btn-white" data-ng-click="update();">Save</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+</div>
+
+<div ng-include="'/modules/calendar/views/calendar.client.view.html'"></div>
