Added style fixes for create task form

--- a/app/public/modules/tasks/views/create-task.client.view.html
+++ b/app/public/modules/tasks/views/create-task.client.view.html
@@ -2,13 +2,13 @@
 	<form class="form-horizontal" novalidate>
 		<fieldset>
 			<div class="row">
-				<div class="col-md-7 col-sm-6 col-xs-12">
+				<div class="col-md-7 col-sm-6 col-xs-12 p-r-1">
 					<div class="ibox task-details">
 						<h4 class="ibox-title">New task</h4>
 						<div class="ibox-content row">
 							<div class="col-md-4 col-sm-12">
 								<div class="field-group" ng-class="{ error: validationError.title }">
-									<label class="control-label label-padding" for="title">Title*</label>
+									<label class="field-label" for="title">Title*</label>
 									<input type="text" data-ng-model="newTask.title"  id="title"
 										   class="form-control input-round-borders" placeholder="Title" required >
 									<div ng-show="validationError.title" class="error">
@@ -16,7 +16,7 @@
 									</div>
 								</div>
 								<div class="field-group">
-									<label class="control-label label-padding" for="title">Template</label>
+									<label class="field-label" for="title">Template</label>
 									<select class="form-control" data-ng-change="loadTaskTemplate(selectedTemplate)"
 											data-ng-model="selectedTemplate" data-ng-options="template.title for template in user.templates"
 									>
@@ -24,7 +24,7 @@
 									</select>
 								</div>
 								<div class="field-group">
-									<label class="control-label label-padding" for="title">Priority*</label>
+									<label class="field-label" for="title">Priority*</label>
 									<select name="priority" class="form-control" data-ng-model="newTask.priority" ng-init="newTask.priority='1'">
 										<option value="1">Urgent and Important</option>
 										<option value="2">Important not Urgent</option>
@@ -36,7 +36,7 @@
 									</div>
 								</div>
 								<div class="field-group">
-									<div class="checkbox isTemplateChecker">
+									<div class="checkbox">
 										<label for="saveAsDraft">
 											<input type="checkbox" data-ng-model="newTask.saveAsDraft" id="saveAsDraft">Save as template
 										</label>
@@ -52,7 +52,7 @@
 							</div>
 							<div class="col-md-4 col-sm-12">
 								<div class="field-group">
-									<label class="control-label label-padding">Start date</label>
+									<label class="field-label">Start date</label>
 									<div class="input-group ui-datepicker">
 										<span ng-class="{disabled: newTask.withOutDate}"
 											  class="input-group-addon calendar-btn" ng-click="openStart($event)">
@@ -68,7 +68,7 @@
 									<!--<timepicker class="select-time" ng-model="newTask.startTime" minute-step="15" show-meridian="true"></timepicker>-->
 								</div>
 								<div class="field-group form-group-time-select">
-									<label class="control-label label-padding" for="endDate">End date</label>
+									<label class="field-label" for="endDate">End date</label>
 									<div class="input-group ui-datepicker">
 										<span  ng-class="{disabled: newTask.withOutDate}"
 											   class="input-group-addon calendar-btn" ng-click="openEnd($event)">
@@ -84,7 +84,7 @@
 									<!--<timepicker class="select-time" ng-model="newTask.endTime" minute-step="15" show-meridian="true"></timepicker>-->
 								</div>
 								<div class="field-group">
-									<label class="control-label">Estimation (hours)</label>
+									<label class="field-label">Estimation (hours)</label>
 									<div>
 										<rzslider rz-slider-model="newTask.estimation"
 												  rz-slider-options="slider.options">
@@ -94,7 +94,7 @@
 							</div>
 							<div class="col-md-4 col-sm-12">
 								<div class="field-group">
-									<label class="control-label label-padding">Notes</label>
+									<label class="field-label">Notes</label>
 									<textarea class="form-control notes-area" data-ng-model="newTask.notes"></textarea>
 									<div ng-show="validationError.notes" class="error">
 										{{validationError.notes.message}}
@@ -108,7 +108,7 @@
 				<div class="col-md-5 col-sm-6 col-xs-12">
 					<!--Slots start-->
 					<div class="row">
-						<div class="col-md-8 col-sm-12">
+						<div class="col-md-8 col-sm-12 p-1">
 							<div class="ibox">
 								<h4 class="ibox-title">Slots</h4>
 								<div class="ibox-content">
@@ -116,7 +116,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-md-4 col-sm-12">
+						<div class="col-md-4 col-sm-12 p-l-1">
 							<div class="ibox">
 								<h4 class="ibox-title">Progress</h4>
 								<div class="ibox-content">
