--- a/app/public/modules/core/less/core.less
+++ b/app/public/modules/core/less/core.less
@@ -123,6 +123,19 @@ a {
   margin: 0;
 }
 
+.p-r-1 {
+  padding-right: 5px;
+}
+
+.p-l-1 {
+  padding-left: 5px;
+}
+
+.p-1 {
+  padding-right: 5px;
+  padding-left: 5px;
+}
+
 .notifications-info .label {
   line-height: 12px;
   padding: 2px 5px;
