Added slots directive

--- a/app/public/modules/tasks/less/createTask.less
+++ b/app/public/modules/tasks/less/createTask.less
@@ -1,4 +1,4 @@
-@import "public/modules/core/less/variables";
+//@import "/public/modules/core/less/variables";
 
 .create-task-wrapper {
   padding-bottom: 15px;
@@ -17,6 +17,10 @@
 
   .ibox-content {
 	padding: 15px 10px 20px 10px;
+  }
+
+  .table-no-tb tr:first-child td {
+	border-top: none;
   }
 
   .field-group {
@@ -39,5 +43,11 @@
 
   .btn-holder {
 	margin: 0 15px;
+  }
+
+  .slot-controls .btn {
+	padding: 2px;
+	width: 25px;
+	height: 25px;
   }
 }
